# WolfieBot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __main__.py  botsetup.py  changelog.txt  docker-compose-example.yml  main.py  pyproject.toml  requirements.txt  utils.py
classes/: _logging.py  transactions.py  utils.py
cogs/: admincommands.py  automove.py  autorole.py  dev.py  economy.py  info.py  modlogs.py  music.py  nocturnia.py  ownercommands.py  patches.py  polls.py  quotes.py  usercommands.py  welcome.py
cogs/crime/: heist.py
core/: admincommands.py  automove.py  autorole.py  dev.py  economy.py  general.py  heist.py  info.py  modlogs.py  music.py  nocturnia.py  patches.py  polls.py  purge.py  quotes.py  simpleembed.py  welcome.py
database/: database.py  guild_db.py
wolfiebot/: __init__.py  constants.py  logger.py
wolfiebot/ai/: ai_manager.py  api.py  chat.py  function_calls.json  simple_api.py  voice.py  voice_manager.py
wolfiebot/commands/: admin.py  dev.py  economy.py  owner.py  quotes.py  user.py
wolfiebot/core/: autorole.py  bank.py  casino.py  chat.py  levels.py  logs.py  music.py  quotes.py  rooms.py  stats.py  welcome.py
wolfiebot/database/: database.py
wolfiebot/games/: casino.py  slots.py  symbols.json
